[package]
name = "predictive_shuffle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.1", default-features = false }
rand = "0.8.5"
rand_chacha = "0.3.1"
sha2 = "0.10.7"
fastrand = "2.0.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benches"
harness = false