[package]
name = "predictive_shuffle"
version = "0.1.0"
edition = "2021"
description = "A vector shuffling library that allows for in-place shuffling, or predictive sub-item shuffling."
license = "MIT"
readme = "README.md"
keywords = ["shuffle"]
exclude = [
    "target/*",
]

[dependencies]
phf = { version = "0.11.1", default-features = false }
rand = "0.8.5"
rand_chacha = "0.3.1"
sha2 = "0.10.7"
fastrand = "2.0.0"

[dev-dependencies]
criterion = "0.5.1"

[build-dependencies]
cargo-readme = "3.2.0"

[[bench]]
name = "benches"
harness = false